test cacheable for spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 application.message: Hello, World!
+spring.cache.name: user,session
+spring.cache.ttl: 30,10
+spring.cache.maxsize: 10240,20480
+spring.cache.redis.host: 127.0.0.1
+spirng.cahce.redis.port: 6379
