test yml and array properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.cache.ttl: 30,10
 spring.cache.maxsize: 10240,20480
 spring.cache.redis.host: 127.0.0.1
 spirng.cahce.redis.port: 6379
+my.servers[0]=dev.bar.com
+my.servers[1]=foo.bar.com
