integrate redis with spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 application.message: Hello, World!
 spring.cache.name: user,session
-spring.cache.ttl: 30,10
+spring.cache.ttl: 30,100
 spring.cache.maxsize: 10240,20480
-spring.cache.redis.host: 127.0.0.1
+spring.cache.redis.host: localhost
 spirng.cahce.redis.port: 6379
 my.servers[0]=dev.bar.com
 my.servers[1]=foo.bar.com
